--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<li>:version  ##  zeige eincompilierte Eigenschaften</li>
 					<li>:set  ##  zeige set Variablen</li>
 					<li>:let  ##  zeige let Variablen</li>
-					<li></li>
+					<li>:map  ##  zeige alle aktuellen KeyMaps</li>
 					<li></li>
 				</ul>
                 <ul>
